; ModuleID = '/home/carl/AnghaBench/git/extr_merge.c_merge_argument.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge.c_merge_argument.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }
%struct.commit = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@the_hash_algo = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.commit*)* @merge_argument to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @merge_argument(%struct.commit* %0) #0 {
  %2 = alloca %struct.commit*, align 8
  store %struct.commit* %0, %struct.commit** %2, align 8
  %3 = load %struct.commit*, %struct.commit** %2, align 8
  %4 = icmp ne %struct.commit* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.commit*, %struct.commit** %2, align 8
  %7 = getelementptr inbounds %struct.commit, %struct.commit* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  br label %13

9:                                                ; preds = %1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @the_hash_algo, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  br label %13

13:                                               ; preds = %9, %5
  %14 = phi i32* [ %8, %5 ], [ %12, %9 ]
  %15 = call i8* @oid_to_hex(i32* %14)
  ret i8* %15
}

declare dso_local i8* @oid_to_hex(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
